--- a/TM.Wedding.UI/tm-wedding-ui/src/app/login/login.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/login/login.component.html
@@ -1,1 +1,45 @@
-<p>login works!</p>
+<div class="bg" style="min-height:600px;text-align: center;">
+    <div class="center-screen" style="padding-top:25%">
+        <table style="width:100%">
+            <tr>
+                <td>
+                    <div>
+                        <h1 class="overlay-div-header">Welcome to our Wedding</h1>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div class="container">
+                        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" style="text-align:left">
+                            <div [ngStyle]="{'opacity':isLoading ? '0.5' : '1' }">   
+                              <div>
+                                <input id="password" name="password" type="password" formControlName="password" placeholder="Enter your password" class="form-control">
+                              </div>
+                            </div>
+                    
+                            <div class="form-inline" style="padding:20px 0px;">
+                              <button class="btn btn-md btn-primary" type="submit" style="margin-right:5px" [disabled]="isLoading || !loginForm.valid">Login</button>
+                            </div>
+                    
+                            <div class="form-inline" style="padding:40px 0px;" [hidden]="!isLoading">
+                              <div class="spinner-border text-primary" role="status">
+                              </div>
+                              <div>
+                                <h4 style="padding-left:20px;color:rgb(23, 23, 23)">Sign in...</h4>
+                              </div>
+                            </div>
+                    
+                            <div class="form-inline errorMsg" [hidden]="errorMessage.length===0">
+                              <div class=error-container>
+                                <span style="padding-left:20px;color:rgb(224, 32, 32)"><i class="bi bi-emoji-frown" style="padding-right:4px"></i>{{errorMessage}}</span>
+                              </div>
+                            </div>
+                    
+                          </form>
+                    </div>
+                </td>
+            </tr>
+        </table>    
+    </div>
+</div>
