draft rsvp implementation

--- a/TM.Wedding.UI/tm-wedding-ui/src/app/app.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container" [hidden]="userLoggedIn | async">
+<div class="container">
   <app-header></app-header>
 </div>
 <router-outlet></router-outlet>
