--- a/TM.Wedding.UI/tm-wedding-ui/src/app/wedding-counter/wedding-counter.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/wedding-counter/wedding-counter.component.html
@@ -1,4 +1,4 @@
-<div class="count-down-timer" style="width:100%">
+<div class="count-down-timer">
     <p>Countdown to {{ currentTime }}</p>
     <div class="wrapper">
       <div class="description">
