--- a/TM.Wedding.UI/tm-wedding-ui/src/app/rsvp-page/rsvp-page.component.css
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/rsvp-page/rsvp-page.component.css
@@ -8,7 +8,7 @@ background-color: rgba(255, 255, 255, 0.4);
 
 .overlay-div-container{
     width:100%;
-    margin-top:25%;
+    padding-top:25%;
     text-align: center;
 }
 
@@ -23,4 +23,12 @@ background-color: rgba(255, 255, 255, 0.4);
 
 .overlay-div-sub-header-day{
     font-size:1rem;
+}
+
+.bg {
+    background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url("../../assets/img/home.event.jpg");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
