--- a/TM.Wedding.UI/tm-wedding-ui/src/app/app.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/app.component.html
@@ -7,7 +7,7 @@
 </div>
 
 <audio autoplay controls loop volume="0.5" #audio style="visibility: hidden">
-  <source src="../assets/audio/weddigin.jazz.mp3" type="audio/mpeg">
+  <source src="../assets/audio/wedding_theme.mp3" type="audio/mpeg">
   <!-- Add additional <source> elements for other audio formats if needed -->
 </audio>
 
