--- a/TM.Wedding.UI/tm-wedding-ui/src/app/header/header.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/header/header.component.html
@@ -12,25 +12,25 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" routerLink="">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/wedding">The Wedding</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about">About Crete</a>
+            <a class="nav-link" routerLink="/about">About Crete</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/info">Info</a>
+            <a class="nav-link" routerLink="/info">Info</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/rsvp">RSVP</a>
+            <a class="nav-link" routerLink="/rsvp">RSVP</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/gifts">Gift List</a>
+            <a class="nav-link" routerLink="/gifts">Gift List</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact">Contact</a>
+            <a class="nav-link" routerLink="/contact">Contact</a>
           </li>
         </ul>
       </div>
