--- a/TM.Wedding.UI/tm-wedding-ui/src/app/couple-info/couple-info.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/couple-info/couple-info.component.html
@@ -1,9 +1,9 @@
-<div class="container">
+<div class="container" style="background-color: #383838;">
     <div class="coupleInfo-mainHeader">
-        <h3>JOIN THODORIS & MARILENA TO CELEBRATE THEIR UNION</h3>
-        <span>A LITTLE ABOUT THE BRIDE AND GROOM</span>
+        <h3 style=" font-family: 'Raleway', sans-serif;">JOIN THODORIS & MARILENA TO CELEBRATE THEIR UNION</h3>
+        <span >A little about the Bride and Groom</span>
         <p style="font-size:2rem;color:gray">
-            <i class="bi bi-arrow-through-heart"></i><i class="bi bi-arrow-through-heart"></i>
+          <i class="bi bi-rainbow"></i>
         </p>
     </div>
     <div class="row">
