--- a/TM.Wedding.UI/tm-wedding-ui/src/app/home/home.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/home/home.component.html
@@ -1,6 +1,5 @@
 <app-home-carousel></app-home-carousel>
-<div class="container" style="padding:50px;text-align:center;width:100%;">
-    <!-- <h1 style="font-family: 'WeddingCaligraphic';font-size:4rem;">Counting Down</h1> -->
+<div class="container" style="padding:2rem 1rem;text-align:center;width:100%;">
     <app-wedding-counter></app-wedding-counter>
 </div>
 <div class="container-coupleInfo">
