--- a/TM.Wedding.UI/tm-wedding-ui/src/app/app.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" [hidden]="!userLoggedIn">
   <app-header></app-header>
 </div>
 <router-outlet></router-outlet>
@@ -6,7 +6,7 @@
   <app-footer></app-footer>
 </div>
 
-<audio autoplay controls loop volume="0.5" #audio style="visibility: hidden">
+<audio controls loop volume="0.5" muted #audio style="visibility: hidden">
   <source src="../assets/audio/wedding_theme.mp3" type="audio/mpeg">
   <!-- Add additional <source> elements for other audio formats if needed -->
 </audio>
