--- a/TM.Wedding.UI/tm-wedding-ui/src/app/header/header.component.css
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/header/header.component.css
@@ -1,4 +1,10 @@
 .gold-fab {
-    background-color: rgb(162, 151, 85); /* Change to the gold color you desire */
-    color: #fff; /* Text color (usually white) for contrast */
-  }
+  background-color: rgb(162, 151, 85);
+  /* Change to the gold color you desire */
+  color: #fff;
+  /* Text color (usually white) for contrast */
+}
+
+.nav-link{
+  color:white;
+}
