--- a/TM.Wedding.UI/tm-wedding-ui/src/app/header/header.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 <div class="d-flex justify-content-center">
-  <nav class="navbar navbar-expand-lg navbar-light ">
+  <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
       <a class="navbar-brand" href="#" style="margin-right:28px;">
-        <button mat-fab class="gold-fab" style="font-family: 'WeddingCaligraphic';color:rgb(82, 82, 82)">
+        <button mat-fab class="gold-fab" style="font-family: 'WeddingCaligraphic';color:rgb(255, 255, 255)">
           T&M
         </button>
       </a>
@@ -12,25 +12,25 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" routerLink="">Home</a>
+            <a class="nav-link" routerLink="" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/wedding">The Wedding</a>
+            <a class="nav-link" routerLink="/wedding" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">The Wedding</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/about">About Crete</a>
+            <a class="nav-link" routerLink="/about" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">About Crete</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/info">Info</a>
+            <a class="nav-link" routerLink="/info" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Info</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/rsvp">RSVP</a>
+            <a class="nav-link" routerLink="/rsvp" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">RSVP</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/gifts">Gift List</a>
+            <a class="nav-link" routerLink="/gifts" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Gift List</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/contact">Contact</a>
+            <a class="nav-link" routerLink="/contact" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Contact</a>
           </li>
         </ul>
       </div>
