--- a/TM.Wedding.UI/tm-wedding-ui/src/app/home-details/home-details.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/home-details/home-details.component.html
@@ -1,18 +1,16 @@
 <div class="container">
     <div class="row">
-        <div class="col">
-            <a href="/wedding" style="text-decoration:none"><h3 style="font-family: 'Roboto', sans-serif;color:rgb(171, 109, 64);">CEREMONY</h3></a>
-            <br>
-            <a href="https://maps.app.goo.gl/P8xvvCH76dtMMmxj8" target="_blank" style="color:black;text-decoration:none"><strong>Skepasti Arena</strong></a><br>
-            <span>19:30 - 20:30</span><br>
+        <div class="col" style="font-family: 'Raleway', sans-serif;">
+            <a href="/wedding" style="text-decoration:none"><h2 style="font-family: 'Raleway', sans-serif;color:#d9a74a">CEREMONY</h2></a>
+            <a href="https://maps.app.goo.gl/P8xvvCH76dtMMmxj8" target="_blank" style="color:rgb(250, 250, 250);text-decoration:none"><strong>Skepasti Arena</strong></a><br>
+            <span><i class="bi bi-calendar2-month-fill" style="padding-right:4px"></i>19:30 - 20:30</span><br>
             <span>Panormos | Crete</span><br>
             <span>ΕΟ Rethimnou Irakliou, Skepasti 74052</span>
         </div>
-        <div class="col">
-            <a href="/wedding" style="text-decoration:none"><h3 style="font-family: 'Roboto', sans-serif;color:rgb(171, 109, 64);">PARTY</h3></a>
-            <br>
-            <a href="https://maps.app.goo.gl/P8xvvCH76dtMMmxj8" target="_blank" style="color:black;text-decoration:none"><strong>Skepasti Arena</strong></a><br>
-            <span>20:30 - Late</span><br>
+        <div class="col" style="font-family: 'Raleway', sans-serif;">
+            <a href="/wedding" style="text-decoration:none"><h2 style="font-family: 'Raleway', sans-serif;color:#d9a74a;">PARTY</h2></a>
+            <a href="https://maps.app.goo.gl/P8xvvCH76dtMMmxj8" target="_blank" style="color:rgb(255, 255, 255);text-decoration:none"><strong>Skepasti Arena</strong></a><br>
+            <span><i class="bi bi-calendar2-month-fill" style="padding-right:4px"></i>20:30 - Late</span><br>
             <span>Panormos | Crete</span><br>
             <span>ΕΟ Rethimnou Irakliou, Skepasti 74052</span>
         </div>
