--- a/TM.Wedding.UI/tm-wedding-ui/src/app/home/home.component.css
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/home/home.component.css
@@ -1,8 +1,9 @@
 .container-coupleInfo{
-    background-color:rgb(247, 247, 247);
+    background-color: #383838;
     text-align:center;
     padding-top:40px;
     padding-bottom:40px;
+    margin-top:20px;
 }
 
 .container-details{
