--- a/TM.Wedding.UI/tm-wedding-ui/src/app/login/login.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/login/login.component.html
@@ -18,8 +18,9 @@
                               </div>
                             </div>
                     
-                            <div class="form-inline" style="padding:20px 0px;">
-                              <button class="btn btn-md btn-primary" type="submit" style="margin-right:5px" [disabled]="isLoading || !loginForm.valid">Login</button>
+                            <div class="form-inline" style="padding:20px 0px;text-align: center;">
+                              <button class="btn btn-lg btn-warning" type="submit" style="margin-right:5px;width:100%;max-width:800" [disabled]="isLoading || !loginForm.valid">
+                                <i class="bi bi-door-open" style="padding-right:8px"></i>Login</button>
                             </div>
                     
                             <div class="form-inline" style="padding:40px 0px;" [hidden]="!isLoading">
