--- a/TM.Wedding.UI/tm-wedding-ui/src/styles.css
+++ b/TM.Wedding.UI/tm-wedding-ui/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@500&family=Lato&family=Poppins:wght@500&family=Raleway&family=Roboto:wght@100;400&family=Tilt+Prism&display=swap');
 
 @font-face {
     font-family: 'WeddingCaligraphic';
@@ -27,6 +28,17 @@
     src: url('assets/fonts/Roboto-Bold.ttf');
 };
 
+@font-face {
+    font-family: 'AeonikProRegular';
+    src: url('assets/fonts/AeonikProTRIAL-Regular.otf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+};
+
 body{
     background-color:#cdcdcd!important;
+}
+
+body{
+    background-color: #3d3d3d!important;
 }
