--- a/TM.Wedding.UI/tm-wedding-ui/src/app/couple-info/couple-info.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/couple-info/couple-info.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="row">
         <div class="col">
-            <div class="card couple-card">
+            <div class="card couple-card slide-in from-left">
                 <img src="../../assets/img/couple-info-groom.jpg" class="card-img-top" alt="..." >
                 <div class="card-body">
                   <h5 class="card-title" style="font-family:WeddingCaligraphic">Thodoris</h5>
@@ -17,7 +17,7 @@
               </div>
         </div>
         <div class="col">
-            <div class="card couple-card">
+            <div class="card couple-card slide-in from-right">
                 <img src="../../assets/img/couple-info-bride.jpg" class="card-img-top" alt="..." >
                 <div class="card-body">
                   <h5 class="card-title" style="font-family:WeddingCaligraphic">Marilena</h5>
