--- a/TM.Wedding.UI/tm-wedding-ui/src/app/home-details/home-details.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/home-details/home-details.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row">
+    <div class="row fade-in">
         <div class="col" style="font-family: 'Raleway', sans-serif;">
             <a href="/wedding" style="text-decoration:none"><h2 style="font-family: 'Raleway', sans-serif;color:#d9a74a">CEREMONY</h2></a>
             <a href="https://maps.app.goo.gl/P8xvvCH76dtMMmxj8" target="_blank" style="color:rgb(250, 250, 250);text-decoration:none"><strong>Skepasti Arena</strong></a><br>
