--- a/TM.Wedding.UI/tm-wedding-ui/src/app/thank-you/thank-you.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/thank-you/thank-you.component.html
@@ -14,7 +14,7 @@
                 <h1 class="overlay-div-header">Thank you</h1>
             </div>
             <div class="container overlay-div-sub-header">
-                <h2>We are so happy and we are waiting you at 24th of August to celebrate together</h2>
+                <h3 style="font-family: 'Raleway', sans-serif;">We are so happy and we are waiting you at 24th of August to celebrate together</h3>
             </div>
         </div>
     </div>
