--- a/TM.Wedding.UI/tm-wedding-ui/src/app/header/header.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/header/header.component.html
@@ -1,10 +1,11 @@
-<div class="d-flex justify-content-center">
+<div class="d-flex">
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
       <a class="navbar-brand" href="#" style="margin-right:28px;">
-        <button mat-fab class="gold-fab" style="font-family: 'WeddingCaligraphic';color:rgb(255, 255, 255)">
+        <img src="../../assets/img/custom-nav-logo.png" style="width:80px;height:80px">
+        <!-- <button mat-fab class="gold-fab" style="font-family: 'WeddingCaligraphic';color:rgb(255, 255, 255)">
           T&M
-        </button>
+        </button> -->
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
