--- a/TM.Wedding.UI/tm-wedding-ui/src/app/home-carousel/home-carousel.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/home-carousel/home-carousel.component.html
@@ -1,4 +1,4 @@
-<div class="carousel-container">
+<div class="carousel-container fade-in">
     <div>
         <div id="homeHeaderCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
             <div class="carousel-inner">
