--- a/TM.Wedding.UI/tm-wedding-ui/src/app/login/login.component.css
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/login/login.component.css
@@ -18,14 +18,52 @@ html {
     text-align: center;
 }
 
-.error-container{
-    padding:20px;
-    border:1px solid #e1b7b7;
-    border-radius:4px;
-    background-color:#ffe2e7;
+.error-container {
+    padding: 20px;
+    border: 1px solid #e1b7b7;
+    border-radius: 4px;
+    background-color: #ffe2e7;
 }
 
-.overlay-div-header{
+.overlay-div-header {
     font-family: 'WeddingCaligraphic';
-    font-size:4rem;
+    font-size: 4rem;
+}
+
+/* Animations */
+.fade-in {
+    opacity: 0;
+    transition: opacity 1s ease-in;
+}
+
+.fade-in.appear {
+    opacity: 1;
+}
+
+.from-left {
+    grid-column: 2 / 3;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+}
+
+.from-right {
+    grid-column: 3 / 4;
+    -webkit-transform: translateX(50%);
+    transform: translateX(50%);
+}
+
+.from-left,
+.from-right {
+    transition: opacity 400ms ease-in, -webkit-transform 800ms ease-in;
+    transition: opacity 400ms ease-in, transform 800ms ease-in;
+    transition: opacity 400ms ease-in, transform 800ms ease-in,
+        -webkit-transform 800ms ease-in;
+    opacity: 0;
+}
+
+.from-left.appear,
+.from-right.appear {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
 }
