--- a/TM.Wedding.UI/tm-wedding-ui/src/app/login/login.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/login/login.component.html
@@ -1,5 +1,10 @@
-<div class="bg" style="min-height:600px;text-align: center;">
-    <div class="center-screen" style="padding-top:25%">
+<div class="container" [hidden]="!isLoading">
+  <ngx-spinner bdColor="rgba(0, 0, 0, 1)" size="medium" color="#f5d15a" type="square-jelly-box" [fullScreen]="true" [showSpinner]="true">
+      <h1 style="color: #f5d15a;font-family: 'Raleway', sans-serif;"> Loading... </h1>
+  </ngx-spinner>
+</div>
+<div class="bg" style="min-height:600px;text-align: center;" [hidden]="isLoading">
+    <div class="center-screen fade-in" style="padding-top:25%">
         <table style="width:100%">
             <tr>
                 <td>
