--- a/TM.Wedding.UI/tm-wedding-ui/src/app/thank-you/thank-you.component.css
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/thank-you/thank-you.component.css
@@ -3,12 +3,13 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(255, 255, 255, 0);
+    color:white;
 }
 
 .overlay-div-container {
     width: 100%;
-    margin-top: 25%;
+    margin-top: 2rem;
     text-align: center;
 }
 
