implement animations on home page

--- a/TM.Wedding.UI/tm-wedding-ui/src/app/home-carousel/home-carousel.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/home-carousel/home-carousel.component.html
@@ -1,36 +1,40 @@
 <div class="carousel-container fade-in">
     <div>
         <div id="homeHeaderCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="../../assets/img/home.carousel.backround-vertical.1.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="../../assets/img/home.carousel.backround-vertical.2.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="../../assets/img/home.carousel.backround-vertical.3.jpg" class="d-block w-100" alt="...">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+            <img src="../../assets/img/home.carousel.backround-vertical.4.png" class="d-block w-100" alt="...">
         </div>
     </div>
     <div class="overlay-div">
         <div class="overlay-div-container">
             <div class="container">
-                <h1 class="overlay-div-header">Welcome to our Wedding</h1>
+                <h1 class="overlay-div-header">We are getting Married</h1>
             </div>
             <div class="container overlay-div-sub-header">
                 <h2>SAVE THE DATE</h2>
-                <h1 class="overlay-div-sub-header-day">24 August 2024</h1>
+                <div class="overlay-div-day-header">
+                    <h1 class="overlay-div-sub-header-day">24aug</h1>
+                    <h1 class="overlay-div-sub-header-day"> 2024</h1>
+                </div>
             </div>
         </div>
     </div>
 </div>
+<div class="animation-container">
+    <div class="lightning-container">
+      <div class="lightning white"></div>
+      <div class="lightning red"></div>
+    </div>
+    <div class="boom-container">
+      <div class="shape circle big white"></div>
+      <div class="shape circle white"></div>
+      <div class="shape triangle big yellow"></div>
+      <div class="shape disc white"></div>
+      <div class="shape triangle blue"></div>
+    </div>
+    <div class="boom-container second">
+      <div class="shape circle big white"></div>
+      <div class="shape circle white"></div>
+      <div class="shape disc white"></div>
+      <div class="shape triangle blue"></div>
+    </div>
+  </div>
