--- a/TM.Wedding.UI/tm-wedding-ui/src/app/home-details/home-details.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/home-details/home-details.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+    <div style="text-align: center; color: white; font-size:4rem">
+        <i class="bi bi-geo"></i>
+    </div>
     <div class="row fade-in">
         <div class="col" style="font-family: 'Raleway', sans-serif;">
             <a href="/wedding" style="text-decoration:none"><h2 style="font-family: 'Raleway', sans-serif;color:#d9a74a">CEREMONY</h2></a>
