--- a/TM.Wedding.UI/tm-wedding-ui/src/app/home-details/home-details.component.css
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/home-details/home-details.component.css
@@ -1,41 +1,52 @@
-.col{
-    color:white;
+.col {
+  color: white;
 }
 
 /* Animations */
 .fade-in {
-    opacity: 0;
-    transition: opacity 1s ease-in;
-  }
-  
-  .fade-in.appear {
-    opacity: 1;
-  }
+  opacity: 0;
+  transition: opacity 1s ease-in;
+}
 
-  .from-left {
-    grid-column: 2 / 3;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%);
-  }
-  
-  .from-right {
-    grid-column: 3 / 4;
-    -webkit-transform: translateX(50%);
-    transform: translateX(50%);
-  }
-  
-  .from-left,
-  .from-right {
-    transition: opacity 400ms ease-in, -webkit-transform 800ms ease-in;
-    transition: opacity 400ms ease-in, transform 800ms ease-in;
-    transition: opacity 400ms ease-in, transform 800ms ease-in,
-      -webkit-transform 800ms ease-in;
-    opacity: 0;
-  }
-  
-  .from-left.appear,
-  .from-right.appear {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-    opacity: 1;
-  }
+.fade-in.appear {
+  opacity: 1;
+}
+
+.from-left {
+  grid-column: 2 / 3;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
+.from-right {
+  grid-column: 3 / 4;
+  -webkit-transform: translateX(50%);
+  transform: translateX(50%);
+}
+
+.from-left,
+.from-right {
+  transition: opacity 400ms ease-in, -webkit-transform 800ms ease-in;
+  transition: opacity 400ms ease-in, transform 800ms ease-in;
+  transition: opacity 400ms ease-in, transform 800ms ease-in,
+    -webkit-transform 800ms ease-in;
+  opacity: 0;
+}
+
+.from-left.appear,
+.from-right.appear {
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+  opacity: 1;
+}
+
+.alerts-border {
+  border: 2px #d9a74a solid;
+  border-radius: 50%;
+  animation: blink 2s;
+  animation-iteration-count: 2000;
+  width:40px;
+  height:40px;
+}
+
+@keyframes blink { 50% { border-color:#3d3d3d ; }  }
