--- a/TM.Wedding.UI/tm-wedding-ui/src/app/contact-page/contact-page.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/contact-page/contact-page.component.html
@@ -1,1 +1,68 @@
-<p>contact-page works!</p>
+<div class="container" [hidden]="!isLoading">
+    <ngx-spinner bdColor="rgba(0, 0, 0, 1)" size="medium" color="#f5d15a" type="square-jelly-box" [fullScreen]="true" [showSpinner]="true">
+        <h1 style="color: #f5d15a;font-family: 'Raleway', sans-serif;"> Loading... </h1>
+    </ngx-spinner>
+  </div>
+<div class="bg" [hidden]="isLoading">
+    <div class="carousel-container">
+        <div class="overlay-div">
+            <div class="overlay-div-container">
+                <div class="container">
+                    <h1 class="overlay-div-header">Contact Us</h1>
+                </div>
+                <div class="container overlay-div-sub-header">
+                    <h3>Send a message if you have any questions or concerns and we will reach out to you</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container" style="padding-top:40px">
+        <form [formGroup]="rsvpForm" (ngSubmit)="onSubmit()" style="text-align:left;">
+            <div [ngStyle]="{'opacity':isLoading ? '0.5' : '1' }">
+                <div>
+                    <div style="margin-bottom:20px">
+                        <input id="submitterName" name="submitterName" formControlName="submitterName"
+                            placeholder="Enter your first name" class="form-control">
+                    </div>
+                    <div style="margin-bottom:20px">
+                        <input id="submitterSurname" name="submitterSurname" formControlName="submitterSurname"
+                            placeholder="Enter your last name" class="form-control">
+                    </div>
+                    <div style="margin-bottom:20px">
+                        <input id="phone" name="phone" formControlName="phone"
+                            placeholder="Enter your phone number" class="form-control">
+                    </div>
+                    <div style="margin-bottom:20px">
+                        <input id="email" name="email" formControlName="email"
+                            placeholder="Enter your email address" class="form-control" type="email">
+                    </div>
+                    <div style="margin-bottom:20px">
+                        <textarea id="comments" name="comments" formControlName="comments"
+                            placeholder="Enter any additional comments" class="form-control" rows="6"></textarea>
+                    </div>
+                </div>
+            </div>
+    
+            <div class="form-inline" style="padding:20px 0px;text-align: center;">
+                <button class="btn btn-lg btn-success" type="submit" style="margin-right:5px;width:100%;max-width:800px"
+                    [disabled]="isLoading || !rsvpForm.valid"><i class="bi bi-envelope-open-heart" style="padding-right:8px"></i>Submit</button>
+            </div>
+    
+            <div class="form-inline" style="padding:40px 0px;" [hidden]="!isLoading">
+                <div class="spinner-border text-primary" role="status">
+                </div>
+                <div>
+                    <h4 style="padding-left:20px;color:rgb(23, 23, 23)">Submitting...</h4>
+                </div>
+            </div>
+    
+            <div class="form-inline errorMsg" [hidden]="errorMessage.length===0">
+                <div class=error-container>
+                    <span style="padding-left:20px;color:rgb(224, 32, 32)"><i class="bi bi-emoji-frown"
+                            style="padding-right:4px"></i>{{errorMessage}}</span>
+                </div>
+            </div>
+    
+        </form>
+    </div>
+</div>
